--- a/ExViewer/Views/ToplistPage.xaml
+++ b/ExViewer/Views/ToplistPage.xaml
@@ -56,7 +56,7 @@
         <tk:PullToRefreshListView x:Name="lv"
                                   Margin="{Binding VisibleBounds, ElementName=page, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0', Mode=OneWay}"
                                   Padding="{Binding VisibleBounds, ElementName=page, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1', Mode=OneWay}"
-                                  ext:ScrollViewerEx.VerticalScrollBarMargin="{Binding VisibleBounds, ElementName=page, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1', Mode=OneWay}"
+                                  ext:ScrollViewerExtensions.VerticalScrollBarMargin="{Binding VisibleBounds, ElementName=page, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1', Mode=OneWay}"
                                   RefreshRequested="lv_RefreshRequested"
                                   ItemsSource="{x:Bind}"
                                   Style="{StaticResource GalleryListViewStyle}"
