new history db; tap to flip
Former-commit-id: 5e587ac052e46b15e077b33ef229226fb6e969e6 [formerly a137f861f0abc02923df3d3fdb40db34fa70cddf]
Former-commit-id: 65ccf91277f1c5847b05355e9d3ec6031b78a353

--- a/ExViewer/Themes/NamedStyles.xaml
+++ b/ExViewer/Themes/NamedStyles.xaml
@@ -335,7 +335,7 @@
         <RowDefinition Height="Auto" />
         <RowDefinition Height="Auto" />
       </Grid.RowDefinitions>
-      <controls:HighlightTextBlock Text="{Binding Content, Mode=OneTime}"
+      <controls:HighlightTextBlock Text="{Binding Title, Mode=OneTime}"
                                    HighlightText="{Binding Highlight, Mode=OneTime}"
                                    Grid.Column="1" />
       <TextBlock Text="{Binding Time, Converter={StaticResource DateTimeOffsetToStringConverter}, Mode=OneTime}"
@@ -379,9 +379,8 @@
     </Grid>
   </DataTemplate>
   <controls:DataTemplateSelector x:Key="SearchAutoSuggestBoxItemTemplateSelector"
-                                 xmlns:vm="using:ExViewer.ViewModels">
-    <controls:DataTemplateKeyValuePair Key="ExViewer.Database.SearchHistory"
-                                       Value="{StaticResource SearchHistoryTemplate}" />
+                                 xmlns:vm="using:ExViewer.ViewModels"
+                                 DefaultTemplate="{StaticResource SearchHistoryTemplate}">
     <controls:DataTemplateKeyValuePair Key="ExViewer.Controls.TagSuggestion.ITagRecord"
                                        Value="{StaticResource EhTagTemplate}" />
   </controls:DataTemplateSelector>
