move DateTemlateSelector to package
Former-commit-id: 38d673dbabf0391b6c274dd06feeef9543908102 [formerly d642764add9473699b6ef1ea6faff8782fd2c738]
Former-commit-id: bffe8a174e1f2f397505b2b2bd72a3f6f6421f09

--- a/ExViewer/Converters/Converters.xaml
+++ b/ExViewer/Converters/Converters.xaml
@@ -1,9 +1,9 @@
 ﻿<uwp:ResourceDictionary xmlns="using:ExViewer.Converters"
                         xmlns:uwp="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                        xmlns:c="using:Opportunity.Converters"
-                        xmlns:t="using:Opportunity.Converters.Typed"
-                        xmlns:com="using:Opportunity.Converters.Command"
+                        xmlns:c="using:Opportunity.UWP.Converters"
+                        xmlns:t="using:Opportunity.UWP.Converters.Typed"
+                        xmlns:com="using:Opportunity.UWP.Converters.Command"
                         xmlns:local="using:ExViewer.Views">
   <com:DelayConverter x:Name="DelayConverter" />
   
