--- a/ExViewer/Views/CachedPage.xaml
+++ b/ExViewer/Views/CachedPage.xaml
@@ -2,7 +2,7 @@
                 xmlns:views="using:Opportunity.MvvmUniverse.Views"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns:xb="using:Opportunity.UWP.Converters.XBind"
                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
