--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -12,12 +12,12 @@
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:local="using:ExViewer.Views"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                xmlns:con="using:Opportunity.Converters"
-                xmlns:tcon="using:Opportunity.Converters.Typed"
+                xmlns:con="using:Opportunity.UWP.Converters"
+                xmlns:tcon="using:Opportunity.UWP.Converters.Typed"
                 xmlns:ani="using:Microsoft.Toolkit.Uwp.UI.Animations"
                 xmlns:interactive="using:Microsoft.Xaml.Interactivity"
                 x:Name="page"
-                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns:xb="using:Opportunity.UWP.Converters.XBind"
                 xmlns:sys="using:System"
                 Loading="page_Loading"
                 Loaded="page_Loaded"
