--- a/ExViewer/Controls/ImagePresenter.xaml
+++ b/ExViewer/Controls/ImagePresenter.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="ExViewer.Controls.ImagePresenter"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:xb="using:Opportunity.Converters.XBind"
+             xmlns:xb="using:Opportunity.UWP.Converters.XBind"
              xmlns:local="using:ExViewer.Controls"
              xmlns:c="using:ExClient"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
