--- a/ExViewer/Views/FavoritesPage.xaml
+++ b/ExViewer/Views/FavoritesPage.xaml
@@ -1,6 +1,6 @@
 ﻿<views:MvvmPage x:Class="ExViewer.Views.FavoritesPage"
                 xmlns:views="using:Opportunity.MvvmUniverse.Views"
-                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns:xb="using:Opportunity.UWP.Converters.XBind"
                 x:Name="root"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,8 +10,8 @@
                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
                 xmlns:vm="using:ExViewer.ViewModels"
                 xmlns:db="using:ExViewer.Database"
-                xmlns:con="using:Opportunity.Converters"
-                xmlns:tcon="using:Opportunity.Converters.Typed"
+                xmlns:con="using:Opportunity.UWP.Converters"
+                xmlns:tcon="using:Opportunity.UWP.Converters.Typed"
                 xmlns:ext="using:Microsoft.Toolkit.Uwp.UI.Extensions"
                 Loading="root_Loading"
                 Unloaded="root_Unloaded"
