--- a/ExViewer/Views/PopularPage.xaml
+++ b/ExViewer/Views/PopularPage.xaml
@@ -1,6 +1,6 @@
 ﻿<views:MvvmPage x:Class="ExViewer.Views.PopularPage"
                 xmlns:views="using:Opportunity.MvvmUniverse.Views"
-                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns:xb="using:Opportunity.UWP.Converters.XBind"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:controls="using:ExViewer.Controls"
