--- a/ExViewer/Views/SettingsPage.xaml
+++ b/ExViewer/Views/SettingsPage.xaml
@@ -1,7 +1,7 @@
 ﻿<views:MvvmPage xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:views="using:Opportunity.MvvmUniverse.Views"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns:xb="using:Opportunity.UWP.Converters.XBind"
                 xmlns:local="using:ExViewer.Views"
                 xmlns:controls="using:ExViewer.Controls"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
