--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -107,7 +107,7 @@
     <TextBlock x:Uid="Controls/AboutControl/LicenceTextBlock"
                Text="License"
                Style="{StaticResource AboutControlSubtitleTextBlockStyle}" />
-    <HyperlinkButton NavigateUri="http://www.gnu.org/licenses/gpl.html"
+    <HyperlinkButton NavigateUri="https://github.com/OpportunityLiu/ExViewer/blob/dev/LICENSE"
                      Style="{StaticResource AboutControlHyperLinkButtonStyle}">
       <PathIcon Data="
 M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.5-2.2c0.3-1.2,0.9-2.3,2-2.3
